--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 					<ul>
 						<li class="nav-menu">
 							<i class="fa fa-caret-right text-white mr-2"></i>
-							<a href="#concept">Getting Started</a>
+							<a href="">Getting Started</a>
 							<ul class="sub-nav">
 								<li class="nav-icon" onclick="setT('Getting Started','Concepts')"><i class=" fs-01 fa  fa-circle mr-2"></i><a href="#concept">Concepts</a></li>
 								<li class="nav-icon" onclick="setT('Getting Started','Installation')"><i class=" fs-01 fa fa-circle  mr-2"></i><a href="#quickstart">Installation</a></li>
 							</ul>
 						</li>
 						<li class="nav-menu">
-							<i class="fa fa-caret-right text-white mr-2"></i><a href="#concept">FAQ</a>
+							<i class="fa fa-caret-right text-white mr-2"></i><a href="#">FAQ</a>
 							<ul class="sub-nav">
 								<!-- <li class="nav-icon"><i class=" fs-01 fa  fa-circle mr-2"></i><a href="#concept">Concepts</a></li>
 								<li class="nav-icon"><i class=" fs-01 fa fa-circle  mr-2"></i><a href="#quickstart">Installation</a></li> -->
